# zerocopy

./: .dockerignore  .gitignore  .rgignore  Cargo.toml  anneal-release-source.patch
.gemini/: styleguide.md
.github/: auto-approvers.json
anneal/: Cargo.toml  Dockerfile  README.md  build.rs  docker.sh  flake.nix
anneal/docs/design/: design.md
anneal/examples/: anatomy.rs  linked_list.rs  namespaces.rs  size_of_align_of.rs
anneal/exocrate/: Cargo.toml
anneal/exocrate/src/: lib.rs  sync.rs
anneal/release-metadata/: linux-aarch64.json  linux-x86_64.json  macos-aarch64.json  macos-x86_64.json
anneal/src/: aeneas.rs  charon.rs  generate.rs  main.rs  resolve.rs  setup.rs  util.rs  validate.rs
anneal/src/parse/: attr.rs  hkd.rs
anneal/tests/: integration.rs
anneal/tests/fixtures/allow_sorry_fallbacks/: expected.stderr
anneal/tests/fixtures/associated_types/: anneal.toml
anneal/tests/fixtures/canonicalized_workspace/source/crates/app/src/: lib.rs
anneal/tests/fixtures/cfg_blind_spot/: expected.stderr
anneal/tests/fixtures/const_generics/: anneal.toml
anneal/tests/fixtures/const_generics/source/src/: lib.rs
anneal/tests/fixtures/diagnostic_mapping/: expected.stderr
anneal/tests/fixtures/edge_cases_cfg/test_7_1_phantom_fn/: expected.stderr
anneal/tests/fixtures/edge_cases_cfg/test_7_3_ghost_spec/: expected.stderr
anneal/tests/fixtures/edge_cases_charon/test_8_2_unions/: expected.stderr
anneal/tests/fixtures/edge_cases_invariants/test_4_6_assoc_types/: anneal.toml
anneal/tests/fixtures/edge_cases_logic/test_5_4_std_types/: expected.stderr
anneal/tests/fixtures/edge_cases_mut_refs/test_3_3_ret_mut/: anneal.toml  expected.stderr
anneal/tests/fixtures/edge_cases_mut_refs/test_3_3_ret_mut/source/src/: lib.rs
anneal/tests/fixtures/edge_cases_naming/test_1_2_lean_keywords_args/: expected.stderr
anneal/tests/fixtures/edge_cases_types/test_2_3_zst/: expected.stderr
anneal/tests/fixtures/edge_cases_types/test_2_3_zst/source/src/: lib.rs
anneal/tests/fixtures/enums_pattern_matching/: anneal.toml
anneal/tests/fixtures/enums_pattern_matching/source/src/: lib.rs
anneal/tests/fixtures/expand_output/: expected-aeneas.stdout  expected-all.stdout  expected-anneal.stdout
anneal/tests/fixtures/expand_output/source/src/: lib.rs
anneal/tests/fixtures/extern_never_verified/: out.txt
anneal/tests/fixtures/external_path_dependency/: anneal.toml
anneal/tests/fixtures/external_path_dependency/source/external_dep/: Cargo.toml
anneal/tests/fixtures/external_path_dependency/source/external_dep/src/: lib.rs
anneal/tests/fixtures/external_path_dependency/source/workspace/app/: Cargo.toml
anneal/tests/fixtures/generate_output/: expected-generate.stdout
anneal/tests/fixtures/is_valid_verification/: expected.stderr
anneal/tests/fixtures/lean_generation/: anneal.toml  expected.stderr
anneal/tests/fixtures/module_resolution/source/src/a/: b.rs
anneal/tests/fixtures/named_bounds_lean_failures/: expected.stderr
anneal/tests/fixtures/named_bounds_lean_failures/source/src/: lib.rs
anneal/tests/fixtures/raw_ptr_dst_layout/: expected.stderr
anneal/tests/fixtures/reject_safe_is_safe/: anneal.toml  expected.stderr
anneal/tests/fixtures/reject_safe_requires/: anneal.toml  expected.stderr
anneal/tests/fixtures/reject_safe_requires/source/src/: lib.rs
anneal/tests/fixtures/size_of_align_of/source/src/: lib.rs
anneal/tests/fixtures/sizedness/: anneal.toml  expected.stderr
anneal/tests/fixtures/sizedness/source/pass/src/: lib.rs
anneal/tests/fixtures/sizedness/source/reject/src/: lib.rs
anneal/tests/fixtures/split_artifact/: expected.stderr
anneal/tests/fixtures/stale_output/source/src/: lib.rs
anneal/tests/fixtures/stuck_wps/: expected.stderr
anneal/tests/fixtures/success_allow_sorry/: expected.stderr
anneal/tests/fixtures/success_allow_sorry/source/src/: types.rs
anneal/tests/fixtures/success_allow_sorry_is_valid/: expected.stderr
anneal/tests/fixtures/success_allow_sorry_is_valid/source/src/: traits_and_impls.rs
anneal/tests/fixtures/target_selection/: expected.stderr
anneal/tests/fixtures/type_features/: anneal.toml  expected.stderr
anneal/tests/fixtures/type_features/source/src/: lib.rs
anneal/tests/fixtures/unions/: expected.stderr
anneal/tests/fixtures/unsound_is_valid_error/: anneal.toml  expected.stderr
anneal/tests/fixtures/weird_functions/: expected.stderr
anneal/tools/: build-prebuilt.sh  check-release-flow-dry-run.sh  collect-release-archive-metadata.py  pre-publish.sh  roll-pinned-prebuilts.py  test_exocrate_metadata_helpers.py  update-exocrate-metadata.py
anneal/tools/ci_metrics/: __init__.py  collect.py  generate_dashboard.py  registry.json  test_collect.py  test_generate_dashboard.py  test_write_semantic_metrics.py  write_semantic_metrics.py
anneal/tools/ci_metrics/testdata/: jobs.json  legacy-data.js  run.json
anneal/tools/ci_metrics/testdata/artifacts/: archive.json
anneal/v2/: Cargo.toml  chase-aeneas-versions.sh  check-flake-eval.sh  flake.nix  prune-lake-cache.py  result  rewrite-lake-vendor.py
anneal/v2/.cargo/: config.toml
anneal/v2/examples/: simple.rs
anneal/v2/exocrate/: Cargo.toml  README.md
anneal/v2/exocrate/src/: lib.rs  sync.rs
anneal/v2/exocrate/tests/: my-tool-deps.tar.zst
anneal/v2/foo/: Cargo.toml
anneal/v2/foo/src/: atomic.rs  lib.rs  sync.rs
anneal/v2/setup/: Cargo.toml  build.rs
anneal/v2/setup/src/: lib.rs
anneal/v2/src/: charon.rs  diagnostics.rs  main.rs  parse.rs  resolve.rs  scanner.rs  setup.rs  util.rs
anneal/v2/tests/: integration.rs  lock_integration.rs  test_prune_lake_cache.py
anneal/v2/toolchain-config/: Cargo.toml  build.rs
anneal/v2/toolchain-config/examples/static-toml/: Cargo.toml  build-toolchain.sh  build.rs  toolchain.tar.zst
anneal/v2/toolchain-config/examples/static-toml/.cargo/: config.toml
anneal/v2/toolchain-config/examples/static-toml/src/: main.rs
anneal/v2/toolchain-config/src/: build.rs  lib.rs
anneal/v2/toolchain-config/testdata/: archive.tar.zst
anneal/v2/toolchain-config/tests/: build_tests.rs
(+62 files in other folders)
