[workspace]
members = [".", "tools/doc_gen"]

[package]
name = "cargo-anneal"
edition = "2024"
version = "0.1.0-alpha.10001"
description = "Formally verify that your safety comments are correct."
categories = [
  "development-tools::cargo-plugins",
  "development-tools::testing",
  "compilers",
  "mathematics",
  "security",
]
keywords = ["verification", "cargo", "plugin", "unsafe", "lean"]
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
repository = "https://github.com/google/zerocopy/tree/main/anneal"
publish = true

exclude = [".*", "testdata"]

# FIXME: Replace these placeholder archive URLs and hashes before publishing
# this crate; `cargo anneal setup` uses this metadata by default when callers
# do not provide a local archive.
[package.metadata.exocrate.linux.x86_64]
sha256 = "b1f6848106b40cc07fad3eeaa6f7c9fbdfb0c985cbcba57e090185d3661c0827"
url = "https://github.com/enthalpysource/zerocopy/releases/download/anneal-toolchains-v0.1.0-alpha.10001-27074078807-b7a16397a393/anneal-toolchain-linux-x86_64.tar.zst"

[package.metadata.exocrate.macos.x86_64]
sha256 = "f608b07ff39ce5996e9ee283f780d980bdf5ace5e224483585b440ea587a1909"
url = "https://github.com/enthalpysource/zerocopy/releases/download/anneal-toolchains-v0.1.0-alpha.10001-27074078807-b7a16397a393/anneal-toolchain-macos-x86_64.tar.zst"

[package.metadata.exocrate.linux.aarch64]
sha256 = "f778d217dd23b0f3d8ccf6c32808706192d997931456728b59baa2d80257096e"
url = "https://github.com/enthalpysource/zerocopy/releases/download/anneal-toolchains-v0.1.0-alpha.10001-27074078807-b7a16397a393/anneal-toolchain-linux-aarch64.tar.zst"

[package.metadata.exocrate.macos.aarch64]
sha256 = "0a76578b8dfd1ed40d2bb5094a354aa6884bc5c29aab39b8e152a2fa1cb56c60"
url = "https://github.com/enthalpysource/zerocopy/releases/download/anneal-toolchains-v0.1.0-alpha.10001-27074078807-b7a16397a393/anneal-toolchain-macos-aarch64.tar.zst"

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["cargo_metadata"] }
dashmap = "6.1.0"
env_logger = "0.11.10"
log = "0.4.29"
miette = { version = "7.6.0", features = ["derive", "fancy"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = [
  "full",
  "visit",
  "extra-traits",
  "parsing",
  "printing",
] }
quote = "1.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
indicatif = { version = "0.18.4", features = ["improved_unicode"] }
console = "0.16.3"
exocrate = { path = "../exocrate" }
sha2 = "0.10"
fs2 = "0.4"
toml = "0.8"
tempfile = "3.27.0"

[build-dependencies]
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
syn = { version = "2.0.117", features = [
  "printing",
  "full",
  "visit",
  "extra-traits",
  "parsing",
] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
ui_test = "0.30.4"
assert_cmd = "2.2.0"

predicates = "3.1.4"

datatest-stable = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.0"
strip-ansi-escapes = "0.2.1"
similar = "2.7.0"

[package.metadata.build_rs]

# The commit hash of the Aeneas repository to use.
#
# FIXME: Add a CI step to verify that this commit exists and matches the
# toolchain version.
aeneas_rev = "42c0e90dacf486f7d3ed5b6cde3a9a81f04915a4"

# The Lean toolchain version to use. This must match the version of Lean used
# by Aeneas in the `lean-toolchain` file in the commit above.
lean_toolchain = "leanprover/lean4:v4.30.0-rc2"
[[test]]
name = "integration"
harness = false
