[package]
name = "exocrate"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
fs4 = "1.1.0"
log = "0.4.29"
sha2 = "0.11.0"
sha2-const = "0.1.3"
tar = "0.4.45"
tempfile = "3.27.0"
toml_const = "1.2.1"
ureq = "3.3.0"
zstd = "0.13.3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }
