[package]
name = "exocrate"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
fs4 = "1.1.0"
log = "0.4.29"
sha2 = "0.11.0"
sha2-const = "0.1.3"
tar = "0.4.45"
tempfile = "3.27.0"
# FIXME: Update to version number "1.2.2-alpha" when it is released.
toml_const = { git = "https://github.com/facesthe/toml_const.git", rev = "b1119325fae3b2a7ca61cd6115134c1c1f113009" }
ureq = "3.3.0"
zstd = "0.13.3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }

#
# The following is a canned configuration that can serve as an example. The purpose of including it
# here is to allow doc tests that illustrate how to use this crate to run to completion.
#

[package.metadata.exocrate.linux.x86_64]
# FIXME: Replace `sha256` with actual linux-x86_64.tar.zst checksum.
sha256 = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
url = "https://example.com/linux-x86_64.tar.zst"

[package.metadata.exocrate.macos.x86_64]
# FIXME: Replace `sha256` with actual macos-x86_64.tar.zst checksum.
sha256 = "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
url = "https://example.com/macos-x86_64.tar.zst"

[package.metadata.exocrate.linux.aarch64]
# FIXME: Replace `sha256` with actual linux-aarch64.tar.zst checksum.
sha256 = "cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc"
url = "https://example.com/linux-aarch64.tar.zst"

[package.metadata.exocrate.macos.aarch64]
# FIXME: Replace `sha256` with actual macos-aarch64.tar.zst checksum.
sha256 = "dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
url = "https://example.com/macos-aarch64.tar.zst"
